--- a/app/views/timetables/_main_table.html.erb
+++ b/app/views/timetables/_main_table.html.erb
@@ -14,7 +14,7 @@
         <th><%= s.surname + ' ' + s.name[0] + '.' + s.patronymic[0] + '.' %></th>
         <% 1.upto @current_date.end_of_month.day do |day| %>
             <% current_day = @current_date + day.day - 1 %>
-            <%= state_of_cell(:th, current_day, s.id) %>
+            <%= state_of_cell(:th, current_day, s.id, all_lessons, all_patrols) %>
         <% end %>
       </tr>
   <% end %>
